# mathforge-agent

./: .env.example  .gitignore  README.md  agent.py  config.py  discord_bot.py  main.py  pyproject.toml  requirements.txt  sandbox.py  tools.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  helpers.py  test_agent.py  test_config.py  test_discord_bot.py  test_main.py  test_sandbox.py  test_tools.py
