[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathforge-agent"
version = "0.2.0"
description = "LangGraph + Claude math agent with sandboxed Python execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.1.8",
    "langchain-anthropic==1.4.1",
    "langchain-core==1.3.0",
    "python-dotenv==1.2.2",
    "numpy>=2.0,<3",
    "sympy>=1.13,<2",
    "matplotlib>=3.9,<4",
    "scipy>=1.14,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[project.scripts]
mathforge = "main:main"

[tool.setuptools]
py-modules = ["agent", "config", "main", "sandbox", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:create_react_agent has been moved:DeprecationWarning",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
